--- a/common-problems.qmd
+++ b/common-problems.qmd
@@ -9,11 +9,11 @@ If you want to practice on fixing broken Quarto documents, check out some pathol
 To avoid problems in the first place, I try and do the following:
 
 -   Develop code in chunks and execute the chunks until they work, then move on.
--   render the document regularly to check for errors.
+-   Render the document regularly to check for errors.
 
 Then, if there is an error:
 
--   recreate the error in an interactive session:
+-   Recreate the error in an interactive session:
     -   restart R
     -   run all chunks below
     -   find the chunk that did not work, fix until it does
