--- a/rstudio.qmd
+++ b/rstudio.qmd
@@ -19,11 +19,13 @@
 
 ## What is RStudio, and why should I use it?
 
-If R is the engine and bare bones of your car, then RStudio is like _the rest of the car_. The engine is super critical part of your car. But in order to make things properly functional, you need to have a steering wheel, comfy seats, a radio, rear and side view mirrors, storage, and seatbelts.
+> If R is the engine and bare bones of your car, then RStudio is like _the rest of the car_.
+
+The engine is super critical part of your car. But in order to make things properly functional, you need to have a steering wheel, comfy seats, a radio, rear and side view mirrors, storage, and seatbelts. RStudio is all those niceties 
 
 The RStudio layout has the following features:
 
-- On the upper left, the Rmarkdown script
+- On the upper left, the Quarto script
 - On the lower left, the R console
 - On the lower right, the view for files, plots, packages, help, and viewer.
 - On the upper right, the environment / history pane
@@ -38,10 +40,10 @@ knitr::include_graphics(here::here("figs","rstudio-screenshot.jpeg"))
 
 We saw a bit of what an Quarto script does.
 
-The R console is the bit where you can run your code. 
-
-The file/plot/package viewer is a handy browser for your current files, like Finder, or File Explorer, plots are where your plots appear, you can view packages, see the help files.
-And the environment / history pane contains the list of things you have created, and the past commands that you have run.
+- The R console is the bit where you can run your code. 
+- The file/plot/package viewer is a handy browser for your current files, like Finder, or File Explorer.
+- Plots are where your plots appear, you can view packages, see the help files.
+- The environment / history pane contains the list of things you have created, and the past commands that you have run.
 
 ## Exercise: RStudio default options {.exercise}
 
@@ -51,12 +53,12 @@ Tools > Global Options (or `Cmd + ,` on macOS)
 
 Under the **General** tab:
 
-- For **workspace**
-    - Uncheck restore .RData into workspace at startup
-    - Save workspace to .RData on exit : "Never"
-- For **History**
-    - Uncheck "Always save history (even when not saving .RData)
-    - Uncheck "Remove duplicate entries in history"
+- For **workspace**:
+    - Uncheck restore .RData into workspace at startup.
+    - Save workspace to .RData on exit : "Never".
+- For **History**:
+    - Uncheck "Always save history (even when not saving .RData).
+    - Uncheck "Remove duplicate entries in history".
 
 ```{r}
 #| label: fig-rstudio-workspace-options
