--- a/pdf-html-word.qmd
+++ b/pdf-html-word.qmd
@@ -1,6 +1,6 @@
 # HTML, PDF, and Word (and more!)
 
-One of the great things about Quarto is that we can convert it to many different output types. The top three that you might be most likely to use are HTML, PDF, and Microsoft Word. There are others that we can discuss later.
+One of the great things about Quarto is that we can convert it to many different output types. The top three that you might be most likely to use are HTML, PDF, and Microsoft Word. There are [other formats](https://quarto.org/docs/reference/)! But we can discuss later.
 
 In this section, we are going to briefly discuss how to render to these output formats, and some things that you might want to do for each of them.
 
@@ -62,6 +62,8 @@ quarto render example.qmd --to docx
 
 It can be easy to get caught up with how your document looks. I highly recommend avoiding compiling to PDF or word until _you really need to_. [This is also recommended by the author of rmarkdown and knitr, Yihui Xie](https://yihui.name/en/2018/07/in-html-i-trust/). Because HTML doesn't have page breaks, this means that you can spend time working on generating content, and not trying to get figures to line up correctly. 
 
+This was a minor revelation to me, to understand that page breaks were the cause of so much angst and pain. Embrace HTML, I say!
+
 ## Your Turn {.exercise}
 
-1. Generate three reports, one as HTML, one as PDF, and one as microsoft word. Remember, if you are having PDF problems, see the installation chapter note on installing \LaTeX\ with the R package, `tinytex`.
+1. Generate three reports, one as HTML, one as PDF, and one as microsoft word. Remember, if you are having PDF problems, see the [installation chapter](installation) note on installing \LaTeX\ with the R package, `tinytex`.
